added new contests

--- a/Segment Trees/.vscode/settings.json
+++ b/Segment Trees/.vscode/settings.json
@@ -1,5 +1,59 @@
 {
     "files.associations": {
-        "cmath": "cpp"
+        "queue": "c",
+        "*.tcc": "cpp",
+        "fstream": "cpp",
+        "xlocmes": "cpp",
+        "xtree": "cpp",
+        "cinttypes": "cpp",
+        "cfenv": "c",
+        "ccomplex": "c",
+        "cstdlib": "c",
+        "cmath": "c",
+        "clocale": "c",
+        "ciso646": "c",
+        "climits": "c",
+        "cfloat": "cpp",
+        "cctype": "cpp",
+        "cerrno": "c",
+        "random": "cpp",
+        "functional": "cpp",
+        "compare": "cpp",
+        "xstddef": "cpp",
+        "xutility": "cpp",
+        "array": "cpp",
+        "forward_list": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "memory": "cpp",
+        "optional": "cpp",
+        "string_view": "cpp",
+        "*.hpp0000644": "cpp",
+        "future": "cpp",
+        "istream": "cpp",
+        "ostream": "cpp",
+        "vector": "cpp",
+        "shared_mutex": "cpp",
+        "sstream": "cpp",
+        "streambuf": "cpp",
+        "thread": "cpp",
+        "regex": "cpp",
+        "tuple": "cpp",
+        "valarray": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "utility": "cpp",
+        "xhash": "cpp",
+        "exception": "cpp",
+        "ios": "cpp",
+        "iterator": "cpp",
+        "mutex": "cpp",
+        "stack": "cpp",
+        "stop_token": "cpp",
+        "xiosbase": "cpp",
+        "xstring": "cpp"
     }
 }
